# api-personal-workout

./: .env  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  pyproject.toml
src/api/: main.py
src/api/v1/: __init__.py
src/api/v1/exercise/: __init__.py  api.py
src/api/v1/muscle/: api.py
src/api/v1/recurrence/: api.py
src/api/v1/sets/: __init__.py  api.py
src/api/v1/workout/: __init__.py  api.py
src/database/: alembic.ini  db.py
src/database/alembic/: env.py
src/database/alembic/versions/: 21180492ff73_add_recurrence_table.py  3637c428ce9f_add_join_table_between_muscle_and_.py  6f1b2eec99ce_add_muscle_table.py  77c294385f1d_added_set_block_table.py  96be49b9b54c_create_set_and_join_table.py  aef3ab5a40a3_create_set_and_join_table.py  e90526c3af37_fix_workout_join_table_fk.py  f641d18b2c26_add_index_column_to_set.py  f6e51d9f208c_added_workout_table_and_join_table.py  fd0d26725d6f_add_exercise_table.py
src/database/models/exercise/: __init__.py  exercise.py  exercise_block.py  exercise_group.py  set.py  set_block.py
src/database/models/muscle/: __init__.py  muscle.py
src/database/models/recurrence/: __init__.py  day.py  recurrence.py
src/schemas/: __init__.py
src/schemas/exercise/: __init__.py  exercise.py  set.py
src/schemas/muscle/: __init__.py  muscle.py
src/schemas/recurrence/: __init__.py  recurrence.py
src/schemas/relations/: __init__.py  muscle_exercise.py
src/schemas/workout/: __init__.py  workout.py
src/services/exercise/: __init__.py  exercise.py
src/services/sets/: __init__.py  sets.py
(+17 files in other folders)
