[tool.poetry]
name = "crudrouter"
version = "0.1.0"
description = ""
authors = ["Andre Oliveira <andre.oliveira@electric.ai>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi-crudrouter = "^0.8.6"
uvicorn = "^0.21.1"
SQLAlchemy = "^2.0.9"
alembic = "^1.10.4"
psycopg2 = "^2.9.6"
pre-commit = "^3.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
